# CBICA_Toolkit

./: .gitignore  .gitmodules  2_Download.txt  3_Installation.txt  4_Usage.txt  5_ForDevelopers.txt  6_People.txt  7_Publications.txt  8_ChangeLog.txt  AUTHORS.txt  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  Download.txt  INSTALL.txt  Install.txt  LICENSE  People.txt  README.md  README.txt  Usage.txt  azure-pipelines.yml  ignore.txt
Config/: Config.cmake.in  ConfigVersion.cmake.in
cmake/: External-Boost.cmake  External-ITK.cmake  External-VTK.cmake  Superbuild.cmake
cmake_modules/: External-ITK.cmake  External-OpenCV.cmake  FindCBICA_Toolkit.cmake  Superbuild.cmake  UtilityMacros.cmake
config/: Config.cmake.in  ConfigVersion.cmake.in  Use.cmake.in
data/: DWI.bval  DWI.bvec  ParserClassTests.txt  input.csv  labels_predicted.csv  labels_real.csv  list.csv  roc_compare.csv  zscores.csv
docs/: CBICATk.TAGFILE  CMakeLists.txt  DicomIOManager_8h_source.html  DicomIOManager_8hxx_source.html  DicomImageReader_8h_source.html  DicomMetadataReader_8h_source.html  DicomSeriesReader_8h_source.html  Download.html  Doxyfile.in  DoxygenLayout.xml  ForDevelopers.html  ITKFactoryRegistration_2itkImageIOFactoryRegisterManager_8h_source.html  ITKFactoryRegistration_2itkTransformIOFactoryRegisterManager_8h_source.html  Installation.html  License.html  People.html  Usage.html  _form0.eps  _form0.ps  _formulas.dvi  _formulas.tex  annotated.html  annotated_dup.js  cbicaCmdParser_8h.html  cbicaCmdParser_8h.js  cbicaCmdParser_8h__incl.dot  cbicaCmdParser_8h__incl.md5  cbicaCmdParser_8h_source.html  cbicaDTIProcessingManager_8h.html  cbicaDTIProcessingManager_8h.js  cbicaDTIProcessingManager_8h__incl.dot  cbicaDTIProcessingManager_8h__incl.md5  cbicaDTIProcessingManager_8h_source.html  cbicaITKCommonHolder_8h.html  cbicaITKCommonHolder_8h__dep__incl.dot  cbicaITKCommonHolder_8h__dep__incl.md5  cbicaITKCommonHolder_8h__incl.dot  cbicaITKCommonHolder_8h__incl.md5  cbicaITKCommonHolder_8h_source.html  cbicaITKComputeAverageMap_8h.html  (+591 more)
docs/search/: all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+20 more)
docs_internal/: CMakeLists.txt  doxy.config.in  footer.html  header.html  style.css  tabs.css
docs_internal/docs/: CMakeLists.txt  doxy.config.in
docs_simple/: CMakeLists.txt  doxy.config.in
docs_sphinx/: Doxyfile.in
licenses/: COPYING.txt  ITK-Apache2.0.txt  License.txt  OpenCV-BSD.txt
src/: Benchmarking.cxx  CMakeLists.txt  itkNumericTraitsVectorPixel2.cxx  main.cpp  testClass.cpp  testClass.h
src/classes/: CMakeLists.txt  cbicaCmdParser.cpp  cbicaCmdParser.h  cbicaLogging.cpp  cbicaLogging.h  cbicaMacros.h  cbicaStatisticalUtilities.h  cbicaStatistics.h  cbicaUtilities.cpp  cbicaUtilities.h
src/classes/itk/: CMakeLists.txt  HausdorffDistance.h  cbicaDTIProcessingManager.cpp  cbicaDTIProcessingManager.h  cbicaITKCommonHolder.cpp  cbicaITKCommonHolder.h  cbicaITKComputeAverageMap.cpp  cbicaITKComputeAverageMap.h  cbicaITKComputeDtiScalars.cpp  cbicaITKComputeDtiScalars.h  cbicaITKComputeVarianceMap.cpp  cbicaITKComputeVarianceMap.h  cbicaITKDtiRecon.h  cbicaITKImageInfo.cpp  cbicaITKImageInfo.h  cbicaITKOpenCVUtilities.h  cbicaITKSafeImageIO.h  cbicaITKUtilities.h  cbicaITKWriteImage.h  itkDTILogEuclideanCalculator.cpp  itkDTILogEuclideanCalculator.h  itkDiffusionTensor3DReconstructionImageFilter.cpp  itkDiffusionTensor3DReconstructionImageFilter.h  itkN3MRIBiasFieldCorrectionImageFilter.cpp  itkN3MRIBiasFieldCorrectionImageFilter.h  itkNaryMeanDiffusionTensorImageFilter.h  itkNaryMeanImageFilter.h  itkNaryVarianceImageFilter.h
src/classes/itk/testing/: CMakeLists.txt  ItkFunctionTests.cxx
src/classes/opencv/: CMakeLists.txt  cbicaOPENCVUtilities.cpp  cbicaOPENCVUtilities.h
src/classes/opencv/testing/: CMakeLists.txt  OpenCVFunctionTests.cxx
src/classes/testing/: BasicFunctionTests.cxx  Benchmarking.cxx  CMakeLists.txt
src/classes/torch/: cbicaTorchUtilities.h
src/windows/: CMakeLists.txt  dirent.h
testing/: BasicFunctionTests.cxx  CMakeLists.txt  ItkFunctionTests.cxx  list.csv
wrapping/: CMakeLists.txt  cbicaToolkit.i
